<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/text_message_name"
        android:text="John Doe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_message_body"
        android:text="hi man, how are you?"
        android:background="@drawable/rounded_rectangle_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="240dp"
        android:padding="8dp"
        android:textColor="#ffffff"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/text_message_name"
        android:layout_marginLeft="8dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_message_time"
        android:text="11:40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        app:layout_constraintLeft_toRightOf="@+id/text_message_body"
        android:layout_marginLeft="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_message_body" />

</androidx.constraintlayout.widget.ConstraintLayout>